Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5912

Missing German translations

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.6.0-rc1
    • Qt Creator 2.3.0-rc, Qt Creator 3.2.0-beta1, Qt Creator 3.5.1, Qt Creator 4.5.1
    • Translations (l10n)
    • None

    Description

      I noticed that the strings seen in the screen shots are not yet translated to German

      Concerning the first picture: the other two submenus (Qt Quick, Text) are also not translated yet
      Concerning the 2nd picture: the four drop down menu values are also not translated yet
      Concerning the snippet-picture: all the entries under "Variante" are English

      Attachments

        1. translation_browse.png
          291 kB
          Thomas Murach
        2. translation_extern.png
          304 kB
          Thomas Murach
        3. translation_new_qt_quick_app.png
          269 kB
          Thomas Murach
        4. translation_new_qt_quick_app.png
          269 kB
          Thomas Murach
        5. translation_no_deployment.png
          152 kB
          Thomas Murach
        6. translation_qmlprofiler.png
          294 kB
          Thomas Murach
        7. translation_snippet.png
          306 kB
          Thomas Murach

        Issue Links

          For Gerrit Dashboard: QTCREATORBUG-5912
          # Subject Branch Project Status CR V

          Activity

            People

              davschul David Schulz
              thomas_murach Thomas Murach
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes