Added some of the missing translations

Task-number: QTCREATORBUG-5912

Change-Id: Ib0df4038e2bdafd2536d068964557575e1b14617
Reviewed-on: http://codereview.qt.nokia.com/3531
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>